Fixed minor problems Notifier renamed to Publisher
git-svn-id: http://cerberus.rubyforge.org/svn@49 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -1,5 +1,5 @@
 #Copy this file to config.yml and configure notification services
-notifier:
+publisher:
   mail:
     delivery_method: smtp
     address: smtp.mymail.com
