Fixed IRC tests
git-svn-id: http://cerberus.rubyforge.org/svn@51 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -15,6 +15,6 @@ publisher:
     password: mypass
     digest: false
   irc:
-    nick: cerberus
-    server: freenode.org
-    port: 5223
+    nick: cerb
+    server: irc.freenode.net
+#    recipients: "#cerberus"
