Added RSS publisher. Improved Jabber publisher Added active: option to publisher:
git-svn-id: http://cerberus.rubyforge.org/svn@54 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -1,5 +1,6 @@
 #Copy this file to config.yml and configure notification services
 publisher:
+  active: mail jabber rss
   mail:
     delivery_method: smtp
     address: smtp.mymail.com
@@ -17,4 +18,6 @@ publisher:
   irc:
     nick: cerb
     server: irc.freenode.net
-#    recipients: "#cerberus"
+    channel: cerberus
+  rss:
+    file: /usr/www/rss.xml
