Added possibility to specify svn login and password in configuration file
git-svn-id: http://cerberus.rubyforge.org/svn@92 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -7,7 +7,7 @@ publisher:
     domain: gmail.com
     authentication: plain
     user_name: someuser
-    password: somemail
+    password: somepassword
   jabber:
     jid: cerberus@gtalk.google.com
     port: 5222
