Added changeset_url support
git-svn-id: http://cerberus.rubyforge.org/svn@106 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -1,6 +1,6 @@
 #Copy this file to config.yml and configure notification services
 publisher:
-  active: mail jabber rss
+  active: mail jabber rss campfire
   mail:
     address: smtp.gmail.com
     port: 587
@@ -17,8 +17,11 @@ publisher:
     nick: cerb
     server: irc.freenode.net
     channel: cerberus
+  campfire:
+    
   rss:
     file: /usr/www/rss.xml
 builder:
   rake:
     task: migrate test
+#changeset_url: POINT_TO_YOUR_TRAC/changeset/
