Added support of Campfilre publisher Moved dependency to active_support
git-svn-id: http://cerberus.rubyforge.org/svn@107 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -17,10 +17,10 @@ publisher:
     nick: cerb
     server: irc.freenode.net
     channel: cerberus
-  campfire:
-    
-  rss:
-    file: /usr/www/rss.xml
+#  campfire:
+#    url: http://someemail:password@cerberustool.campfirenow.com/room/51660
+#  rss:
+#    file: /usr/www/rss.xml
 builder:
   rake:
     task: migrate test
