Added lazy loading of Cerberus components (publishers, builder, scm)
git-svn-id: http://cerberus.rubyforge.org/svn@110 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -1,6 +1,5 @@
-#Copy this file to config.yml and configure notification services
 publisher:
-  active: mail jabber rss campfire
+#  active: mail jabber rss campfire
   mail:
     address: smtp.gmail.com
     port: 587
@@ -8,20 +7,20 @@ publisher:
     authentication: plain
     user_name: someuser
     password: somepassword
-  jabber:
-    jid: cerberus@gtalk.google.com
-    port: 5222
-    password: mypass
-    digest: false
-  irc:
-    nick: cerb
-    server: irc.freenode.net
-    channel: cerberus
+#  jabber:
+#    jid: cerberus@gtalk.google.com
+#    port: 5222
+#    password: mypass
+#    digest: false
+#  irc:
+#    nick: cerb
+#    server: irc.freenode.net
+#    channel: cerberus
 #  campfire:
 #    url: http://someemail:password@cerberustool.campfirenow.com/room/51660
 #  rss:
 #    file: /usr/www/rss.xml
-builder:
-  rake:
-    task: migrate test
+#builder:
+#  rake:
+#    task: migrate test
 #changeset_url: POINT_TO_YOUR_TRAC/changeset/
