Improved docs and Usage text. Added FAQ section about stateless nature of Cerberus.
git-svn-id: http://cerberus.rubyforge.org/svn@126 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/lib/cerberus/config.example.yml
+++ b/lib/cerberus/config.example.yml
@@ -8,10 +8,8 @@ publisher:
     user_name: someuser
     password: somepassword
 #  jabber:
-#    jid: cerberus@gtalk.google.com
-#    port: 5222
-#    password: mypass
-#    digest: false
+#    jid: somemailbox@gmail.com/cerberus
+#    password: somepassword
 #  irc:
 #    nick: cerb
 #    server: irc.freenode.net
