Update to webgen 0.4.1
git-svn-id: http://cerberus.rubyforge.org/svn@127 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/default.template
+++ b/doc/site/src/default.template
@@ -17,7 +17,7 @@
         <div id="sidebar-wrapper">
           <div id="sidebar">
             <h3>Menu</h3>
-            {menu: }
+            {menu: {menuStyle: vertical}}
             <dl>
               <dt><a href="http://rubyforge.org/frs/?group_id=1794">Downloads</a><br /></dt>
               <dt><a href="http://rubyforge.org/tracker/?group_id=1794">Issue Tracker</a><br /></dt>
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div id="content-wrapper">
-          <div id="content">{content: }</div>
+          <div id="content">{block: content}</div>
         </div>
       </div>
       <hr class="hidden" />
