--- a/doc/site/config.yaml
+++ b/doc/site/config.yaml
@@ -1,2 +1,5 @@
-# Configuration file for webgen
-# Used to set the parameters of the plugins
+File/PageHandler:
+  validator: xmllint
+
+Misc/SmileyReplacer:
+  emoticonPack: crystal
