--- a/doc/site/src/default.template
+++ b/doc/site/src/default.template
@@ -11,7 +11,7 @@
     <div id="page">
       <div id="header">
        <div id="site-title"><a href="http://cerberus.rubyforge.org/">Cerberus</a></div>
-       <div id="site-subtitle">Continuous Integration tool for Ruby.<br><small>Would like to install it? Just type 'gem install cerberus'.</small></div>
+       <div id="site-subtitle">Continuous Integration tool for Ruby.<br><small>Would you like to install it? Just type 'gem install cerberus'.</small></div>
       </div>
       <hr class="hidden"/>
       <div id="main">
